
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pyicloud"
description = "PyiCloud is a module which allows pythonistas to interact with iCloud webservices."
authors = [{ name = "Carlos Martín", email = "inean.es@gmail.com" }]
dependencies = [
    "requests>=2.24.0",
    "click>=7.1.2",
    "tzlocal>=4.0",
    "certifi>=2020.6.20",
    "pyyaml>=6.0.1",
]
dynamic = ["readme", "version"]

requires-python = ">=3.8.1"
license = { text = "MIT" }
keywords = ["icloud", "find-my-iphone"]
maintainers = [{ name = "The PyiCloud Authors" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/inean/pyicloud"
Changelog = "https://github.com/inean/releases"

[project.scripts]
icloud = "pyicloud.cmdline:main"


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "pylint>=2.12.2",
    "pylint-strict-informational>=0.1",
    "pytest>=7.0.1",
    "tox-pdm>=0.7.2",
    "flake8-pyproject>=1.2.3",
]

[tool.pdm.scripts]
icloud = { call = "pyicloud.cmdline:main" }

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include_trailing_comma = false
include = '(pyicloud|tests)\/.*(\.py|GET|POST)'

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint.FORMAT]
expected-line-ending-format = 'LF'
ignore-long-lines = '^\s*(# )?<?https?://\S+>?$'
indent-after-paren = 4
indent-string = '    '
max-line-length = 120


[tool.pylint.MASTER]
jobs = 0
ignore = '.git'
persistent = 'no'
suggestion-mode = 'yes'

[tool.pylint."MESSAGES CONTROL"]
disable = '''
  format,
  duplicate-code,
  inconsistent-return-statements,
  too-few-public-methods,
  too-many-ancestors,
  too-many-arguments,
  too-many-branches,
  too-many-instance-attributes,
  too-many-lines,
  too-many-locals,
  too-many-public-methods,
  too-many-return-statements,
  too-many-statements,
  too-many-boolean-expressions,
  unnecessary-pass,
  useless-object-inheritance,
  wrong-import-order,
  consider-using-f-string
'''
[tool.pylint."BASIC"]
good-names = 'id,i,j,k'

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = '''
    BaseException,
    Exception,
    PYiCloudException
'''

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
isolated_build = True
envlist = py38, py39, py310, ,py311, py312, lint


[testenv]
deps = pytest
commands = pytest

[testenv:lint]
deps =
    black
    pylint
commands =
    black --check --fast .
    pylint pyicloud tests

[gh-actions]
python =
    3.8: py38, lint
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
"""
